# ompi-mirror

oshmem/mca/memheap/: memheap.h
oshmem/mca/memheap/base/: base.h  memheap_base_mkey.c
oshmem/mca/spml/: spml.h
oshmem/mca/spml/base/: base.h  spml_base.c
oshmem/mca/spml/ikrit/: spml_ikrit.c
oshmem/mca/spml/ucx/: Makefile.am  spml_ucx.c  spml_ucx.h  spml_ucx_component.c
oshmem/mca/spml/yoda/: spml_yoda.c
oshmem/runtime/: oshmem_shmem_exchange.c  runtime.h
